--- a/css/estilos.css
+++ b/css/estilos.css
@@ -25,15 +25,15 @@ nav li{
 
 nav a {
     text-decoration: none;
+    font-weight: lighter;
     color: rgb(0,0,25);
 }
 nav a:hover {
     color: rgba(0,0,25,0.5);
 
 }
-
 nav a.active {
-    font-weight: 700; 
+    font-weight: bolder; 
     font-style: italic; 
 }
 body {
@@ -44,13 +44,17 @@ body {
 a{
     text-decoration: none;
     color: rgb(240, 93, 80);
-    font-weight: bolder;
+
 }
 a:hover {
     background-color: #ddd;
     color: rgba(240, 93, 80, 0.5);
 }
-
+.a--destacados{
+    text-decoration: none;
+    color: rgb(240, 93, 80);
+    font-weight: bold;
+}
 
 article h1 {
     font-size: 2.5rem;
@@ -65,6 +69,12 @@ article p {
 
 .article__p--centrado {
     font-size: 11pt;
+    text-align: center;
+    padding-left: 15%;
+    padding-right: 15%;
+}
+.article__p--centrado--chiquito {
+    font-size: 8pt;
     text-align: center;
     padding-left: 15%;
     padding-right: 15%;
@@ -123,9 +133,13 @@ article figcaption {
     color: #353535;
     margin-top: 5px;
 }
+.section--centrada{
+    width: 35%;
+    margin: 0 auto;
+}
 section{
     padding-left: 20%;
-    padding-right: 15%;
+    padding-right: 15%;  
 }
 li{
     margin-left: 15px;
